--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
+# Use remote_theme to allow additional plugins
+remote_theme: pages-themes/primer@748f4ec7d1c3f96037d5c861395c7a5909353a52 # Jan 16, 2024
 plugins:
   - jekyll-gfm-admonitions
-  - jekyll-optional-front-matter
 markdown: GFM
-title: false
+title: Python language binding for Web IDL
